# prob-unet-climate-downscaling

./: .gitignore  climex_utils.py  latent_explore_single_prior.py  main.py  metrics.py  networks.py  prob_unet.py  prob_unet_utils.py  pyproject.toml  train_prob_unet_model.py
baseline/: main.py
notebooks/: results.ipynb  test_prob_unet.ipynb  test_prob_unet_L1.ipynb  test_return_levels.ipynb  weight_function.ipynb
src/: latent_exploration.py  latent_exploration_posterior.py  metrics.py  prob_unet.py
src/notebooks/: compare_observed_vs_model_return_levels.ipynb  results.ipynb  test_prob_unet.ipynb
weight_analysis_raw_hr/alpha_0.007_beta_0.0481/: weight_statistics_raw_hr.txt
