[project]
name = "prob-unet-mds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cartopy>=0.25.0",
    "dask>=2025.12.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pytorch-msssim>=1.0.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
    "xarray>=2025.12.0",
]
